Thu Nov 27 19:04:50 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_args.c: fix backtrace location for keyword related exceptions.

	  For example, the following program
	    def foo(k1: 1); end # line 1
            foo(k2: 2)          # line 2
	  causes "unknown keyword: k2 (ArgumentError)".

	  Before this patch, the backtrace location is only line 2.
	  However, error should be located at line 1 (over line 2 in
	  stack trace). This patch fix this problem.

	* class.c (rb_keyword_error_new): separate exception creation logic
	  from rb_keyword_error(), to use in vm_args.c.

	* vm_insnhelper.c (rb_arg_error_new): rename to rb_arity_error_new().

	* vm_args.c (argument_arity_error): rename to argument_arity_error().

	* vm_args.c (arugment_kw_error): added to fix backtrace.

	* test/ruby/test_keyword.rb: add tests.

Thu Nov 27 17:31:58 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (prelude.c): no longer depends on miniruby, since not
	  depending on rbconfig.rb.

Thu Nov 27 17:12:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (miniprelude.c): miniruby needs no preludes.

Thu Nov 27 17:10:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl: no code if no prelude code is given.

Thu Nov 27 13:11:00 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): enable lazy sweep on GC by malloc()
	  (malloc_increase) to make GC incrementally.

	  This change can increase memory consumption. Report us if you find
	  any problem.

Thu Nov 27 12:46:38 2014  Tanaka Akira  <akr@fsij.org>

	* time.c (time_s_mkutc): [DOC] Time.utc's 10 arguments form
	  doesn't examine wday, yday, isdst and tz.
	  (time_s_mktime): [DOC] Time.mktime's 10 arguments form
	  doesn't examine wday, yday and tz.
	  Suggested by naruse.

Thu Nov 27 11:45:33 2014  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_data_to_ary): add missing GC guard

Thu Nov 27 10:51:59 2014  Koichi Sasada  <ko1@atdot.net>
